--- a/src/components/modal-block/modal-block.pug
+++ b/src/components/modal-block/modal-block.pug
@@ -31,3 +31,21 @@ mixin modal-block()
           +e.circle__center
             +e('img')(src='assets/images/checked.svg' alt='')
         +e('span').error-text Вы ввели не верные данные вернитесь и заполните форму верное
+      +b.modal-style.modal-send-message.jsModalMessage
+        +e('h2') Написать нам
+        +b('form').jsModalRegForm
+          +b('select').jsModalSelectResume
+            +e('option') 1
+            +e('option') 2
+            +e('option') 3
+          +b('textarea')(name='message' rows='5' placeholder='Введите сообщение').jsMessage
+          +b('button')(type='submit' disabled).jsBtnReg.jsBtn Отправить
+      +b.modal-style.modal-send-message.jsModalMessageVacancy
+        +e('h2') Написать нам
+        +b('form').jsModalRegForm
+          +b('select').jsModalSelectVacancy
+            +e('option') 1
+            +e('option') 2
+            +e('option') 3
+          +b('textarea')(name='message' rows='5' placeholder='Введите сообщение').jsMessage
+          +b('button')(type='submit' disabled).jsBtnReg.jsBtn Отправить
