--- a/src/components/resume/resume.pug
+++ b/src/components/resume/resume.pug
@@ -97,7 +97,7 @@ mixin resume()
                   +e('img')(src='assets/images/fb.svg' alt='')
                 +b('a')(href='#').inst-bg
                   +e('img')(src='assets/images/instagram.svg' alt='')
-              +e('button').btn написать сообщение
+              +e('button').btn.jsSendMessage написать сообщение
               +e('a')(href='#').complain Пожаловаться на<br>это резюме
       +b.soc-sidebar#sidebar-vr
         .sidebar-inner
