--- a/src/components/all-vacancies/all-vacancies.sass
+++ b/src/components/all-vacancies/all-vacancies.sass
@@ -19,7 +19,7 @@
     height: 200px
     background-color: #dd3d34
     border-radius: 0 100% 0 0 / 100% 100% 0 0
-    z-index: 2
+    z-index: 0
     @media (max-width: 769px)
       width: 100px
       height: 100px
@@ -139,9 +139,10 @@
     display: flex
     flex-direction: column
     margin-right: 40px
+    @media (max-width: 992px)
+      margin-right: 0
     @media (max-width: 478px)
       width: 100%
-      margin-right: 10px
 
     & .single-card
       width: 650px
@@ -218,6 +219,7 @@
 
       & .btn-card
         position: relative
+        margin: 0 5px 5px 0
         @media (max-width: 577px)
           margin-left: 0 !important
 
