--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -57,8 +57,8 @@
 
   & .home__nav
     width: auto
-    @media (max-width: 993px)
-      width: 100%
+    //@media (max-width: 993px)
+    //  width: 100%
 
   & .home__form
     width: 540px
