--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -48,16 +48,21 @@ mixin home()
         +e.square
       +e.main-top
         +e.main-header
-          +e('nav').nav
+          +b('button').mobile-nav-btn.jsOpenNavMenu
+            +e('span')
+            +e('span')
+            +e('span')
+          +b.filter-overlay.nav-overlay.jsNavOverlay
+          +e('nav').nav.jsNavMenu
             +e('a').nav-item(href='index.html') Главная
             +e('a').nav-item(href='resume.html') Резюме
             +e('a').nav-item(href='all-resume.html') Поиск резюме
-            //+e('button').nav-item.jsLogin Вход
-            +b.dropdown.jsMenu
-                            +b('span').home__nav-item.jsOpenMenu User
-                            +e.menu.jsShowMenu
-                              +b('a')(href='/personal-area').home__nav-item Личный кабинект
-                              +b('a')(href='/personal-area').home__nav-item Выйти
+            +e('button').nav-item.jsLogin Вход
+            //+b.dropdown.jsMenu
+            //  +b('span').home__nav-item.jsOpenMenu User
+            //  +e.menu.jsShowMenu
+            //    +b('a')(href='/personal-area').home__nav-item Личный кабинект
+            //    +b('a')(href='/personal-area').home__nav-item Выйти
           +e.main-email.d-flex.align-items-center
             +e('span').main-ico @
             a(href='mailto:info@vendoram.ru') info@vendoram.ru
