--- a/src/components/home/home.sass
+++ b/src/components/home/home.sass
@@ -358,12 +358,38 @@
       margin-left: 35px
       margin-right: 0
     @media (max-width: 993px)
-      justify-content: center
-      margin-left: 0
-    @media (max-width: 400px)
+      position: fixed
+      top: 0
+      left: 0
+      width: 250px !important
+      height: 250px
+      margin: 0
+      display: flex
       flex-direction: column
-      text-align: center
-      margin-bottom: 20px
+      align-items: center
+      justify-content: center
+      background: #ffffff
+      color: #000000
+      transform: translateY(-300px)
+      transition: all ease 1s
+      z-index: 10
+
+      & span
+        color: #000000
+
+      & .dropdown__menu a
+        color: #ffffff
+
+    @media (max-width: 575px)
+      width: 100vw !important
+      height: 100vh
+      transform: translateY(-101vh)
+    //  justify-content: center
+    //  margin-left: 0
+    //@media (max-width: 400px)
+    //  flex-direction: column
+    //  text-align: center
+    //  margin-bottom: 20px
     &-item
       padding: 3px 15px
       font-size: 14px
