--- a/src/components/single-vacancy/single-vacancy.sass
+++ b/src/components/single-vacancy/single-vacancy.sass
@@ -45,6 +45,7 @@
     display: flex
     flex-direction: column
     align-items: flex-start
+    width: 100%
     padding: 20px
     background-color: #ffffff
 
@@ -56,6 +57,9 @@
         width: 100%
       @media (max-width: 476px)
         flex-wrap: wrap
+
+      & .btn-card
+        margin-right: 5px
 
       & > span
         margin-left: 45px
@@ -76,7 +80,7 @@
       &__view
         display: flex
         align-items: center
-        margin: 5px 130px 5px 10px
+        margin: 5px 95px 5px 10px
         @media (max-width: 769px)
           margin-right: 30px
         @media (max-width: 476px)
@@ -95,6 +99,7 @@
         font-size: 10px
         font-weight: 500
         text-decoration: none
+        white-space: nowrap
         @media (max-width: 476px)
           margin: 10px 0 0 !important
 
@@ -434,3 +439,10 @@
     @media (max-width: 993px)
       transform: translateX(0)
       transition: all ease 1s
+
+.category-block
+  display: flex
+  flex-wrap: wrap
+
+  & .btn-card
+    margin-bottom: 5px
