--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,8 +1,8 @@
 extends ../components/layout-default/layout-index
-include ../components/home/home
+include ../components/nhome/nhome
 
 block head
     - var pageTitle = 'Index Page';
 
 block content
-  +home()
+  +nhome()
