--- a/src/shared/sass/elements.sass
+++ b/src/shared/sass/elements.sass
@@ -268,21 +268,26 @@
 
   &__menu
     position: absolute
-    top: 150%
+    top: 93%
     left: 0
     display: none
     flex-direction: column
     align-items: flex-start
     width: 175px
     padding: 10px
-    background-color: rgba(13, 21, 102, .3)
+    background-color: #ffffff
     border-radius: 10px
 
+    @media (max-width: 1250px)
+      background-color: #000000
     @media (max-width: 992px)
       right: 50%
       left: auto
-      background-color: rgba(13, 21, 102, 1)
+      //background-color: rgba(13, 21, 102, 1)
       transform: translateX(50%)
+
+    & .nhome__nav-item
+      color: #000000
 
 
 .dropdown .form-logout
@@ -294,3 +299,51 @@
 
 .nav-overlay
   display: none
+
+.prevSlickHome
+  position: absolute
+  bottom: -98px
+  left: 90px
+  height: 48px
+  border: none
+  background: none
+  outline: none
+  cursor: pointer
+  @media (max-height: 825px)
+    bottom: 70px
+    left: -80px
+  @media (max-width: 1500px)
+    bottom: -98px
+    left: 90px
+  @media (max-width: 1100px)
+    left: 160px
+
+  & img
+    transform: rotate(90deg)
+
+.nextSlickHome
+  position: absolute
+  bottom: -78px
+  left: 135px
+  height: 48px
+  border: none
+  background: none
+  outline: none
+  cursor: pointer
+  @media (max-height: 825px)
+    bottom: 90px
+    left: -40px
+  @media (max-width: 1500px)
+    bottom: -78px
+    left: 135px
+  @media (max-width: 1100px)
+    left: 205px
+
+  & img
+    transform: rotate(-90deg)
+
+.mob-hide
+  @media (max-width: 1200px)
+    display: none
+  @media (max-height: 740px)
+    display: none
