--- a/src/components/nhome/nhome.sass
+++ b/src/components/nhome/nhome.sass
@@ -266,6 +266,7 @@
     font-size: 15px
     font-weight: 500
     text-align: justify
+    letter-spacing: 1px
     @media (max-width: 1750px)
       width: 785px
       margin-top: 10px
@@ -466,12 +467,12 @@
     margin-top: -110px
     margin-left: 180px
     @media (max-width: 1750px)
-      height: 210px
+      height: 215px
       margin-top: -140px
     @media (max-width: 1500px)
       margin-top: 0
     @media (max-width: 1450px)
-      height: 170px !important
+      height: 175px !important
     @media (max-height: 770px)
       height: 150px
       margin-left: 20px
@@ -681,10 +682,14 @@
     color: #2a2a2a
     font-weight: 800
 
-  & .single-card__info p
-    color: #2a2a2a
-    font-weight: 400
-    line-height: 1.6
+  & .single-card__info
+    font-size: 12px
+    letter-spacing: 0.5px
+
+    & p
+      color: #2a2a2a
+      font-weight: 400
+      line-height: 1.4
 
   & .btn-red
     border-radius: 11px
