--- a/src/shared/sass/elements.sass
+++ b/src/shared/sass/elements.sass
@@ -277,6 +277,7 @@
     padding: 10px
     background-color: #ffffff
     border-radius: 10px
+    z-index: 3
 
     @media (max-width: 1250px)
       background-color: #000000
