правки по главной

--- a/src/components/nhome/nhome.pug
+++ b/src/components/nhome/nhome.pug
@@ -75,8 +75,8 @@ mixin nhome()
             +e.info
               p Полная занятость, неполная занятость, удаленная работа, готовы взять студента. Высшее образование.
               p Strategy partners - международная компания, занимающаяся стрстегическим консалтингом, расширяет свою команду...
-            .d-flex.flex-wrap.align-items-center.justify-content-start.mt10
-              a.btn-card.btn-red Откликнуться
+            .d-flex.flex-wrap.align-items-center.justify-content-start.mt-auto
+              a.btn-card.btn-red(data-id="1") Откликнуться
               +e('a').like(href='#')
                 i.fa.fa-heart-o
                 span В избранное
