--- a/src/components/nhome/nhome.sass
+++ b/src/components/nhome/nhome.sass
@@ -447,6 +447,7 @@
       border: none
       cursor: pointer
       width: 215px
+      text-align: left
       //@media (max-width: 1350px)
       //  margin: 10px 0
       &:hover
@@ -699,7 +700,7 @@
     margin-left: 16px
 
 .home-card.slick-slide.slick-current.slick-active
-  width: auto !important
+  width: 96% !important
   margin-left: 10px !important
   transition: all ease .5s
   @media (max-width: 1500px)
