--- a/src/shared/sass/elements.sass
+++ b/src/shared/sass/elements.sass
@@ -273,7 +273,7 @@
     display: none
     flex-direction: column
     align-items: flex-start
-    width: 175px
+    width: 195px
     padding: 10px
     background-color: #ffffff
     border-radius: 10px
@@ -289,6 +289,11 @@
 
     & .nhome__nav-item
       color: #000000
+      text-align: left
+
+    & .home__nav-item
+      color: #000000
+      text-align: left
 
 
 .dropdown .form-logout
