--- a/src/components/modal-block/modal-block.pug
+++ b/src/components/modal-block/modal-block.pug
@@ -34,6 +34,7 @@ mixin modal-block()
       +b.modal-style.modal-send-message.jsModalMessage
         +e('h2') Написать нам
         +b('form').jsModalRegForm
+          +b('span') Выберите вакансию
           +b('select').jsModalSelectResume
             +e('option') 1
             +e('option') 2
@@ -43,6 +44,7 @@ mixin modal-block()
       +b.modal-style.modal-send-message.jsModalMessageVacancy
         +e('h2') Написать нам
         +b('form').jsModalRegForm
+          +b('span') Выберите резюме
           +b('select').jsModalSelectVacancy
             +e('option') 1
             +e('option') 2
