--- a/src/components/modal-block/modal-block.sass
+++ b/src/components/modal-block/modal-block.sass
@@ -88,7 +88,18 @@
           padding: 0 0 0 17px !important
           font-size: 16px !important
           font-weight: 400 !important
-          color: #a8a8a8 !important
+          color: #000000 !important
+
+          & .select2-selection__placeholder
+            font-size: 16px !important
+            font-weight: 400 !important
+            color: #000000 !important
+
+    & > span
+      margin: 0 auto 10px 0
+      font-size: 16px
+      font-weight: 400
+      color: #000000
 
     & input
       width: 420px
@@ -98,7 +109,7 @@
       font-weight: 400
       color: #a8a8a8
       box-shadow: 0 0 59px rgba(40, 40, 40, 0.05)
-      border-radius: 35px
+      border-radius: 10px
       border: 1px solid #e8e8e8
       background-color: #ffffff
       @media (max-width: 1200px)
@@ -109,9 +120,12 @@
     & textarea
       max-width: 420px
       width: 100%
-      padding: 20px 0 20px 40px
+      padding: 20px 20px 20px
+      font-size: 16px
+      font-weight: 400
+      color: #000000
       box-shadow: 0 0 59px rgba(40, 40, 40, 0.05)
-      border-radius: 35px
+      border-radius: 10px
       border: 1px solid #e8e8e8
       background-color: #ffffff
 
