--- a/src/components/nhome/nhome.pug
+++ b/src/components/nhome/nhome.pug
@@ -66,7 +66,7 @@ mixin nhome()
                   a.d-flex.align-items-center(href='#')
                     +e('img').icon(src='assets/images/arr-place.png' alt='')
                     span.ml5 Донецк
-                +e('h3').title Дизайнер презентаций
+                +e('a')(href='#' title='Дизайнер презентаций Дизайнер презентаций Дизайнер презентаций').title Дизайнер презентаций Дизайнер презентаций Дизайнер презентаций
                 +e.info-second
                   span.mr10 Добавлено: 19 марта 2018, 17:15
                   +e.view
@@ -76,7 +76,7 @@ mixin nhome()
               p Полная занятость, неполная занятость, удаленная работа, готовы взять студента. Высшее образование.
               p Strategy partners - международная компания, занимающаяся стрстегическим консалтингом, расширяет свою команду...
             .d-flex.flex-wrap.align-items-center.justify-content-start.mt-auto
-              a.btn-card.btn-red(data-id="1") Откликнуться
+              a.btn-card.btn-red.jsVacancyModal(data-id="1") Откликнуться
               +e('a').like(href='#')
                 i.fa.fa-heart-o
                 span В избранное
