--- a/src/components/all-resume/all-resume.pug
+++ b/src/components/all-resume/all-resume.pug
@@ -148,7 +148,7 @@ mixin all-resume()
                       +e('img')(src='assets/images/fb.svg' alt='')
                     +b('a')(href='#').inst-bg
                       +e('img')(src='assets/images/instagram.svg' alt='')
-                //+e('button').save Сохранить в отклики
+                a.btn-card.btn-red.jsSendMessage(data-id="1") Откликнуться
             +b.single-card-resume
               +e.top
                 +e.top-left
@@ -174,7 +174,7 @@ mixin all-resume()
                       +e('img')(src='assets/images/fb.svg' alt='')
                     +b('a')(href='#').inst-bg
                       +e('img')(src='assets/images/instagram.svg' alt='')
-                //+e('button').save Сохранить в отклики
+                a.btn-card.btn-red.jsSendMessage(data-id="1") Откликнуться
           +b.soc-sidebar#sidebar-vr
             .sidebar-inner
               +b('p').vr-head Прямой эфир
