--- a/src/components/all-vacancies/all-vacancies.sass
+++ b/src/components/all-vacancies/all-vacancies.sass
@@ -220,6 +220,7 @@
       & .btn-card
         position: relative
         margin: 0 5px 5px 0
+        border-radius: 11px
         @media (max-width: 577px)
           margin-left: 0 !important
 
