--- a/src/components/nhome/nhome.sass
+++ b/src/components/nhome/nhome.sass
@@ -158,7 +158,7 @@
     &-big-circle
       position: absolute
       left: -340px
-      top: -330px
+      top: -270px
       width: 558px
       min-height: 558px
       z-index: 1
@@ -166,8 +166,8 @@
         display: none
     &-gerb
       position: absolute
-      top: -190px
-      left: 0
+      bottom: 0
+      left: -70px
       z-index: 3
       @media (max-width: 1200px)
         display: none
@@ -260,7 +260,7 @@
   &__desc
     width: 917px
     margin-top: 10px
-    margin-left: 191px
+    margin-left: 291px
     margin-right: 0
     font-size: 15px
     font-weight: 500
@@ -269,6 +269,7 @@
     @media (max-width: 1750px)
       width: 785px
       margin-top: 10px
+      margin-left: 251px
     @media (max-width: 1450px)
       width: auto
       margin: 30px 50px 0 200px
