--- a/src/components/nhome/nhome.sass
+++ b/src/components/nhome/nhome.sass
@@ -400,44 +400,25 @@
     display: flex
     align-items: flex-start
     margin-left: auto
-    //@media (max-width: 1350px)
-    //  justify-content: flex-start
-    //  width: 100%
-    //  margin-left: 35px
-    //  margin-right: 0
     @media (max-width: 1250px)
       position: fixed
       top: 0
       left: 0
-      width: 250px !important
-      height: 250px
+      width: 100%
       margin: 0
       display: flex
       flex-direction: column
-      align-items: center
+      align-items: flex-start
       justify-content: center
       background: #ffffff
       color: #000000
-      transform: translateY(-300px)
+      transform: translateX(-100%)
       transition: all ease 1s
       z-index: 10
 
       & span
         color: #000000
 
-      & .dropdown__menu a
-        color: #ffffff
-
-    @media (max-width: 575px)
-      width: 100vw !important
-      height: 100vh
-      transform: translateY(-101vh)
-    //  justify-content: center
-    //  margin-left: 0
-    //@media (max-width: 400px)
-    //  flex-direction: column
-    //  text-align: center
-    //  margin-bottom: 20px
     &-item
       padding: 3px 20px
       font-size: 16px
@@ -448,8 +429,13 @@
       cursor: pointer
       width: 215px
       text-align: left
-      //@media (max-width: 1350px)
-      //  margin: 10px 0
+      @media (max-width: 1250px)
+        display: flex
+        align-items: center
+        width: 100%
+        padding: 20px
+        color: #a8a8a8
+        border-bottom: 1px solid #e8e8e8
       &:hover
         color: $red
       &.nav-btn
@@ -457,7 +443,9 @@
         width: 155px
         text-align: left
         @media (max-width: 1250px)
-          width: 215px
+          display: flex
+          align-items: center
+          width: 100%
   &__footer
     position: relative
     z-index: 1
@@ -677,7 +665,7 @@
   & .single-card__title
     display: block
     width: 280px
-    margin: 5px 0 0
+    margin: 15px 0 0
     font-size: 16px
     color: #2a2a2a
     font-weight: 800
@@ -708,10 +696,11 @@
   @media (max-width: 1500px)
     width: 90% !important
     margin-left: 33px !important
-  //@media (max-width: 400px)
-  //  width: 95% !important
-  //  margin-left: 10px !important
   @media (max-width: 475px)
     width: 100% !important
     margin-left: 0 !important
     margin-right: 0 !important
+
+@media (max-width: 1250px)
+  .nhome__nav > .nhome__nav-item:first-child
+    margin-top: 60px
