--- a/src/components/all-vacancies/all-vacancies.sass
+++ b/src/components/all-vacancies/all-vacancies.sass
@@ -161,6 +161,7 @@
 
       &__info-second
         position: relative
+        font-size: 12px
         @media (max-width: 330px)
           flex-direction: column
           align-items: flex-start
@@ -358,7 +359,7 @@
 
 .filter-btn
   position: fixed
-  bottom: 15%
+  bottom: 10px
   left: 50%
   display: none
   padding: 15px 40px
