--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -15,10 +15,12 @@ mixin header()
               +e('a').nav-item(href='index.html') Главная
               +e('a').nav-item(href='resume.html') Резюме
               +e('a').nav-item(href='all-resume.html') Поиск резюме
-              //+e('button').nav-item.jsLogin Вход
+              +e('button').nav-item.jsLogin Вход
               +b.dropdown.jsMenu
                 +b('span').home__nav-item.jsOpenMenu User
+                  +b('span') >
                 +e.menu.jsShowMenu
+                  +b('span').nhome__nav-item.mobile-prev.jsMenuPrev Назад
                   +b('a')(href='/personal-area').home__nav-item Личный кабинект
                   +b('a')(href='/personal-area').home__nav-item Выйти
             +e.main-email.d-flex.align-items-center
