--- a/src/components/home/home.sass
+++ b/src/components/home/home.sass
@@ -352,44 +352,24 @@
     align-items: center
     margin-left: 8%
     margin-right: 80px
-    @media (max-width: 1350px)
-      justify-content: flex-start
-      width: 100%
-      margin-left: 35px
-      margin-right: 0
-    @media (max-width: 993px)
+    @media (max-width: 1250px)
       position: fixed
       top: 0
       left: 0
-      width: 250px !important
-      height: 250px
+      width: 100%
       margin: 0
       display: flex
       flex-direction: column
-      align-items: center
+      align-items: flex-start
       justify-content: center
       background: #ffffff
       color: #000000
-      transform: translateY(-300px)
+      transform: translateX(-100%)
       transition: all ease 1s
       z-index: 10
 
       & span
         color: #000000
-
-      & .dropdown__menu a
-        color: #ffffff
-
-    @media (max-width: 575px)
-      width: 100vw !important
-      height: 100vh
-      transform: translateY(-101vh)
-    //  justify-content: center
-    //  margin-left: 0
-    //@media (max-width: 400px)
-    //  flex-direction: column
-    //  text-align: center
-    //  margin-bottom: 20px
     &-item
       padding: 3px 15px
       font-size: 14px
@@ -398,8 +378,13 @@
       background: none
       border: none
       cursor: pointer
-      @media (max-width: 1350px)
-        margin: 10px 0
+      @media (max-width: 1250px)
+        display: flex
+        align-items: center
+        width: 100%
+        padding: 20px
+        color: #a8a8a8
+        border-bottom: 1px solid #e8e8e8
       &:hover
         color: $red
   &__footer
@@ -571,3 +556,9 @@
       &:nth-child(2)
         top: auto
         bottom: -8px
+
+@media (max-width: 1250px)
+  .home__main-header .home__nav-item
+    color: #000000
+  .home__nav > .home__nav-item:first-child
+    margin-top: 60px
