--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -47,6 +47,11 @@
     &:before
       display: none
 
+  & .home__nav-item_logo
+    width: 200px
+    @media (max-width: 1250px)
+      display: none
+
   & .home__main-header
     justify-content: flex-end
     @media (max-width: 993px)
