--- a/src/components/home/home.sass
+++ b/src/components/home/home.sass
@@ -560,5 +560,5 @@
 @media (max-width: 1250px)
   .home__main-header .home__nav-item
     color: #000000
-  .home__nav > .home__nav-item:first-child
+  .home__nav > .home__nav-item:nth-child(2)
     margin-top: 60px
