--- a/src/components/layout-default/layout-index.pug
+++ b/src/components/layout-default/layout-index.pug
@@ -21,6 +21,7 @@ html(lang='ru')
       block content
       +modal-block()
     script(src='assets/libs/jquery-3.3.1.min.js')
+    script(src='assets/libs/resizeSensor.js')
     script(src='assets/libs/jquery.sticky-kit.js')
     script(src='assets/libs/slick/slick.min.js')
     script(src='assets/libs/select2/select2.min.js')
