--- a/src/components/nhome/nhome.pug
+++ b/src/components/nhome/nhome.pug
@@ -7,12 +7,6 @@ mixin nhome()
         +e.square
       +b.nhome-white-line
         +e.square
-      +b.nhome-white-line
-        +e.square
-      +b.nhome-white-line
-        +e.square
-      +b.nhome-white-line
-        +e.square
       +e.main-top
         +e.main-header
           +b('button').mobile-nav-btn.jsOpenNavMenu
@@ -21,17 +15,18 @@ mixin nhome()
             +e('span')
           +b.filter-overlay.nav-overlay.jsNavOverlay
           +e('nav').nav.jsNavMenu
-            +e('a').nav-item(href='index.html') Главная
+            +e('a').nav-item_logo(href='index.html')
+              +e('img')(src='assets/images/logo-main.png')
             +e('a').nav-item(href='resume.html') Резюме
             +e('a').nav-item(href='all-resume.html') Поиск резюме
-            //+e('button').nav-item.nav-btn.jsLogin Вход
-            +b.dropdown.jsMenu
-              +b('span').nhome__nav-item.nav-btn.jsOpenMenu Никита Лисовский
-                +b('span') >
-              +e.menu.jsShowMenu
-                +b('span').nhome__nav-item.mobile-prev.jsMenuPrev Назад
-                +b('a')(href='/personal-area').nhome__nav-item Личный кабинект
-                +b('a')(href='/personal-area').nhome__nav-item Выйти
+            +e('button').nav-item.nav-btn.jsLogin Вход
+        //    +b.dropdown.jsMenu
+        //      +b('span').nhome__nav-item.nav-btn.jsOpenMenu Никита Лисовский
+        //        +b('span') >
+        //      +e.menu.jsShowMenu
+        //        +b('span').nhome__nav-item.mobile-prev.jsMenuPrev Назад
+        //        +b('a')(href='/personal-area').nhome__nav-item Личный кабинект
+        //        +b('a')(href='/personal-area').nhome__nav-item Выйти
         +e.main-content
           +e('form').form
             +e('span').form-text Сейчас на сайте свыше <span class='white-text'> 2398 вакансий </span> и <span class='white-text'> 3483 резюме</span>
@@ -52,10 +47,10 @@ mixin nhome()
         +e('h1').title Работа
         +e('p').desc Сделайте грамотный выбор! Предлагаем размещение и продвижение на новой и перспективной площадке <span class="yellow-text">РаботаДНР</span>. Станьте первым и получайте максимум продаж, опережая конкурентов на несколько шагов. Полностью берем на себя все, что связано с размещением на маркетплейсе, эффективно управляем ценами и поставками
         +e('img').main-bottom-img(src='assets/images/img1.png' img='')
-    +e.aside
+    +e('aside').aside
       +e('img').dots2(src='assets/images/bg-dots.png' alt='')
       +e.aside-header
-        +e('span').aside-header-vacancy Вакансии дня
+        +e('h3').aside-header-vacancy Вакансии дня
       +b.home__slider
          - for (var i = 0; i < 5; i++)
           +b.single-card.home-card
