--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -53,7 +53,7 @@
       display: none
 
   & .home__main-header
-    justify-content: flex-end
+    justify-content: center
     @media (max-width: 993px)
       justify-content: center
 
