--- a/src/components/single-vacancy/single-vacancy.sass
+++ b/src/components/single-vacancy/single-vacancy.sass
@@ -23,13 +23,17 @@
       height: 100px
 
 .result-search
+  display: flex
+  align-items: center
+  padding: 0
   margin: 25px 0 20px
-  font-weight: 500
-  font-size: 12px
-  color: #282828
+  list-style: none
 
-  & span
-    margin-left: 5px
+  & li
+    margin: 0 0 0 2px
+    font-weight: 500
+    font-size: 12px
+    color: #282828
 
 .single-block
   position: relative
